--- a/fitnesstrackertest-Gradle/src/main/resources/application.properties
+++ b/fitnesstrackertest-Gradle/src/main/resources/application.properties
@@ -6,3 +6,15 @@ server.servlet.context-path=/fitnesstrackertest
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=springbootxyzabcd
+spring.mail.password=dhyuytlnddgvzzrl
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+com.nischitha.fitnesstrackertest.welcome.email.subject=Welcome to MYFITNESSBUDYY
+
+com.nischitha.fitnesstrackertest.welcome.email.body=Start yout fitness journey
